--- a/login_task/src/pages/Login.css
+++ b/login_task/src/pages/Login.css
@@ -1,32 +1,153 @@
-.login-container {
+.login-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at center, #ea061dce 0%, #46023cc7 40%, #21004c 80%);
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 }
+
+.snowflake {
+  position: absolute;
+  top: -5%;
+  pointer-events: none;
+  user-select: none;
+  will-change: transform;
+  animation: fall linear infinite;
+  color: white;
+}
+
+@keyframes fall {
+  0% {transform: translate3d(0, -10vh, 0) rotate(0deg);
+  }
+  50% {transform: translate3d(15px, 50vh, 0) rotate(180deg);
+  }
+  100% {transform: translate3d(-15px, 110vh, 0) rotate(360deg); opacity: 0;
+  }
+}
+
+.login-card-wrapper {
+  position: relative;
+  padding: 13px;
+  border: 1px solid #ba9360;
+  background: repeating-linear-gradient(
+    45deg,
+    #7d0000,
+    #ff0000 20px,
+    #ffffff 20px,
+    #ffffff 40px
+  );
+  border-radius: 25px;
+  width: 95%;
+  max-width: 550px;
+}
+
+.login-container {
+  background-color: #fdf3de;
+  padding: 40px;
+  border-radius: 22px;
+  box-shadow: 0 0 90px rgb(255, 255, 0);
+  text-align: center;
+  position: relative;
+  border: 4px solid #d4a86d;
+ 
+
+}
+
+.login-container h1 {
+  color: #b30000;
+  font-family: 'Georgia', serif;
+  font-size: 40px;
+  margin-bottom: 33px;
+  margin-top: -2px;
+  text-shadow: 0 0 12px rgba(255,255,255,0.7), 0 0 6px #ba0000;
+}
+
 
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  width: 350px;
+  gap: 15px;
 }
 
 .login-form input {
-  border-radius: 11px;
+  padding: 18px;
+  border: 2px solid #5e3bb9;
+  border-radius: 40px;
+  font-size: 18px;
+  font-weight: bold;
   text-align: center;
-  font-size: 20px;
-  padding: 15px;
+  outline: none;
+  transition: all 0.3s ease;
 }
+
+
+.login-form input:focus {
+  border-color: #2e7d32;
+  box-shadow: 0 0 10px rgba(46, 59, 125, 0.2);
+  transform: scale(1.02);
+}
+
 
 .login-form button {
   padding: 15px;
-  border-radius: 11px;
-  background-color: greenyellow;
-  font-size: 20px;
+  background-color: #2e7d32;
+  color: white;
+  border-radius: 50px;
+  border: 1px solid #054d08;
+  font-size: 18px;
+  font-weight: bold;
   cursor: pointer;
+  transition: all 0.8s ease;
+  margin-top: 8px;
+  box-shadow: 0 5px 15px rgba(46, 125, 50, 0.3);
+}
+
+.login-form button:hover {
+  background: radial-gradient(circle at center, #2e7d32 20%, #430150 100%);;
+  border: 1px solid #5339a1de;
+  transform: translateY(-2px);
+  text-shadow: #3903ad 0 0 8px;
+  box-shadow: 0 2px 30px rgba(125, 52, 215, 0.498);
 }
 
 .error-text {
-  color: red;
-  font-size: 24px;
+  color: #d32f2f;
+  background-color: #f3d2d7de;
+  font-size: 16px;
+  padding: 18px;
+  border-radius: 12px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  border: 1px dashed #c71010;
 }
+/*Welcome*/
+
+.fire {
+  font-size: 60px;
+  animation: float 5s ease-in-out infinite;
+  user-select: none; 
+  text-shadow: orange 0 -15px 10px, red 0 2px 30px;
+}
+
+@keyframes float {
+  0%, 100% { transform: translateY(-15px); }
+  50% { transform: translateY(-25px); }
+}
+
+.logout-btn {
+  padding: 15px 30px;
+  background-color: red;
+  color: white;
+  border-radius: 30px;
+  border: 2px solid #eb7e01;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 15px;
+  box-shadow: 0 -3px 15px rgba(230, 185, 5);
+}
+
